# bg

./: .clang-format  CMakeLists.txt  Makefile  qsort_sandbox  qsort_sandbox.c  sandbox  sandbox.c  slice.c  slice.h  slice_test.c  stack.c  types.h
.cache/clangd/index/: unity.c.C806DF435BD112ED.idx  unity.h.E327CA3DA8CD8DF4.idx  unity_internals.h.293F0A583EDEC0E7.idx
container/: slice.c  slice_test.c  stack.h
mem/: allocator.h
src/: bg_common.h  bg_testutils.h  bg_types.h  common.h  types.h
src/container/: bg_slice.c  bg_slice.h  bg_slice_test.c  bg_stack.c  bg_stack.h  slice.c  slice.h  slice_test.c  stack.c
src/math/: bg_fastmod.h  bg_math.h  fastmod.h  math.h
src/mem/: allocator.h  bg_allocator.h
